fix(mobile-height): possibly fixing an issue w/t the height on mobile
Since there is a know issue with the mobile height and proposed solution,
this commit is intended to fix it.

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -4,6 +4,9 @@
   width: 100%;
   height: max-content;
   min-height: 100vh;
+  //noinspection CssInvalidPropertyValue
+  min-height: -webkit-fill-available;
+  overflow: hidden;
 }
 
 #__layout {
